Update library to reflect styleguide
- Major upgrade and rewrite of all scripts
- Update all scripts to use function, local variables and call function
  within
- Update all scripts that require a usage guide to set as local variable
- Update all scripts with dependency check
- Update all scripts with help and invalid option test flags
- Delete all scripts that are OS X dependent and Git dependent, as
  they'll be moved to a separate repository
- Create man pages for any necessary script
- Create more functions, `fs`, `get-cert-names`, `json`, `rgb-to-xterm`,
  `targz`, `update-ctags`.

Issue: #6

--- a/bin/todo
+++ b/bin/todo
@@ -5,6 +5,7 @@
 #
 # Description:
 #   Creates something for me to do
+#   Run our new web 2.0 todo list application and raise millions of VC dollars.
 #
 # Dependencies:
 #   None
@@ -15,7 +16,9 @@
 # Usage:
 #   `todo task1`
 
-set -e
+_todo() {
+	set -e
+	touch "${HOME}/Desktop/$*"
+}
 
-# Run our new web 2.0 todo list application and raise millions of VC dollars.
-touch "${HOME}/Desktop/$*"
+_todo "$@"
