chore: update docs

--- a/share/man/man1/eachdir.1
+++ b/share/man/man1/eachdir.1
@@ -6,7 +6,7 @@
 eachdir \- run one or more commands in one or more directories
 .SH SYNOPSIS
 eachdir
-.RI "[" "dir" "]" 
+.RI "[" "dir" "]"
 .RI "command"
 .SH DESCRIPTION
 By default, all subdirs of the current dir will be iterated over, but if --
@@ -42,6 +42,6 @@ eachdir repo-* -- 'git fetch && git merge'
 
 .RE
 .SH REPORTING BUGS
-Report bugs to the Github Repo <https://github.com/chrisopedia/bash-utils/issues>
+Report bugs to the Github Repo <https://github.com/iamnewton/bash-utils/issues>
 .SH AUTHOR
-Newton <https://twitter.com/chrisOHpedia>
+Newton
